# recognizr

./: .gitignore  Cargo.toml  README.md  check_model.py  config.toml  inspect_model.py  test_detector.sh  test_recognizr.sh
crates/recognizr/: Cargo.toml
crates/recognizr/src/: error.rs  main.rs  models.rs  pipeline.rs
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/lib/: api.ts  context.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/images/: +server.ts
frontend/src/routes/api/images/[id]/analyze/: $types.ts  +server.ts
frontend/src/routes/auth/callback/: +page.svelte
frontend/src/routes/debug/: +page.svelte
frontend/src/routes/gallery/: +page.svelte
frontend/src/routes/google-photos/: +page.svelte
frontend/src/routes/recognize/: +page.svelte
src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  pipeline.rs
