[package]
name = "recognizr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features=["multipart"] }
base64 = "0.22.1"
image = "0.25.6"
imageproc = "0.25.0"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
surrealdb = "2.3.7"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
