[package]
name = "recognizr"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
anyhow = "1.0.98"
axum = { version = "0.8.4", features=["multipart"] }
base64 = "0.22.1"
config = "0.15.13"
image = "0.25.6"
imageproc = "0.25.0"
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.9", features = ["cuda"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
surrealdb = "2.3.7"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.9" }
ort-sys = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.9" }

[profile.dev]
rpath = true
 
[profile.release]
rpath = true

[target.x86_64-unknown-linux-gnu]
rustflags = [ "-Clink-args=-Wl,-rpath,\\$ORIGIN" ]
