[package]
name = "recognizr"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.x86_64-unknown-linux-gnu]
rustflags = [ "-Clink-args=-Wl,-rpath,\\$ORIGIN" ]


